Implement delete post
